test/library/packages/UnitTest/UnEqual1DArray.good
./UnitTest.chpl:149: error: Arrays differ: [1, 5, 7] != [1, 7, 6]
First differing element at index 2:
5
7

