test/library/packages/UnitTest/UnEqual1DArray.chpl
use UnitTest;
var x = [1,5,7];
var y = [1,7,6];
UnitTest.assertEqual(x,y);